Mon Oct 14 18:06:19 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* argp-parse.c (argp_parse): Don't consume non-option arguments
	that aren't recognized by any parser.
	Allocate enough space for TOP_ARGP's parent list to include the
	version parser.

Thu Sep 19 17:48:14 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* fsysops.c (fsys_update): Renamed from fsys_remount.
	Use --update, not --remount.

Fri Aug 30 20:44:44 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* argp-help.c (argp_help): Print documentation only according to
	the ARGP_HELP_*_DOC bits in FLAGS.
	Possibly print bug report address if ARGP_HELP_BUG_ADDR is set.
	Replace FIRST by ANYTHING (sense inverted).
	* argp.h (ARGP_HELP_PRE_DOC, ARGP_HELP_POST_DOC, ARGP_HELP_DOC,
	ARGP_HELP_BUG_ADDR): New macros.
	(ARGP_HELP_STD_HELP): Include ARGP_HELP_DOC & ARGP_HELP_BUG_ADDR.
	(argp_program_bug_address): New declaration.
	(ARGP_HELP_EXIT_ERR, ARGP_HELP_EXIT_OK): Values changed.
	* Makefile (SRCS): Add argp-ba.c.

Tue Aug 20 17:12:42 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* argp-help.c (argp_doc): Add FIRST_ONLY argument.
	Don't output a blank line for empty post-docs.
	(argp_help): Use it.  Move first call to argp_doc after newline.

Mon Aug 19 14:45:30 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* argp-help.c (argp_help): Add note about --usage to `Try...' msg.
	Supply new args to argp_doc, and additional call before arg help.
	(argp_doc): Add the POST and PRE_BLANK arguments, & return val.

Wed Jul 31 15:24:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* wire.c (_start): No longer declared as weak, now that everything
	is getting recompiled anyway.
	
Fri Jul 26 20:57:53 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* timefmt.c (fmt_past_time): Always use WIDTH+1 as strftime's limit.

Thu Jul 25 23:10:35 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* timefmt.c (fmt_past_time): Terminate SEPS.

	* argp-help.c (hol_entry_help): Never return without restoring margins.
