@@ -23,7 +23,8 @@ libname = libshouldbeinlibc
 SRCS = argp-parse.c argp-help.c argp-pv.c argp-pvh.c argp-ba.c \
 	termsize.c idvec.c idvec-auth.c timefmt.c exec-reauth.c \
 	canon-host.c maptime.c shared-dom.c localhost.c wire.c portinfo.c \
-	xportinfo.c portxlate.c lcm.c cacheq.c fsysops.c
+	xportinfo.c portxlate.c lcm.c cacheq.c fsysops.c argp.c \
+	idvec-funcs.c maptime-funcs.c
 LCLHDRS = argp.h idvec.h timefmt.h maptime.h \
 	wire.h portinfo.h portxlate.h cacheq.h
 installhdrs = $(LCLHDRS)
