@@ -1,0 +1,2 @@
+#define IDVEC_EI
+#include "idvec.h"
