@@ -1,0 +1,5 @@
+#define MAPTIME_EI
+#include <errno.h>
+#include <sys/types.h>
+#include <sys/time.h>
+#include "maptime.h"
